# LLM

./: README.md  intro_openai.ipynb
mcp-remote-server/: README.md  client.py  pyproject.toml  server.py
mcp-server-demo/: Dockerfile  README.md  client.py  docker-compose.yml  pyproject.toml  rag_chat_app.py  rag_chat_app_v2.py  server.py  server_rag.py
rag/: load_excel.py  load_excel_to_chromadb.py  query_chromadb.py  rag_chat_app.py
slm/: 01_train.ipynb  01_train_colab.ipynb  02_inference.ipynb  README.md  dataset.json
