[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.8",
    "dotenv>=0.9.9",
    "fastmcp>=2.3.3",
    "mcp[cli]>=1.7.0",
    "numpy>=2.2.5",
    "openai>=1.78.0",
    "pandas>=2.2.3",
    "streamlit>=1.45.0",
]
